[tool.poetry]
name = "awesome-taiwan-foods"
version = "0.1.0"
description = ""
authors = ["小克 <goodjack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.scripts]
main = 'awesome_taiwan_foods.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
